[tool.poetry]
name = "chartsworth"
version = "0.1.0"
description = ""
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
slack-sdk = "^3.21.3"
chatlab = {extras = ["noteable"], version = "1.0.0a13"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
